--- a/app/src/main/res/layout/activity_wifi__lan_card.xml
+++ b/app/src/main/res/layout/activity_wifi__lan_card.xml
@@ -4,20 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.oswal.stockmangmentnew.ProductDetail.Router_activity">
+    tools:context=".ProductDetail.wifi_LAN_card">
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Router details "
+            android:text="Wifi_LAN_card "
             android:gravity="center"
             android:textStyle="bold"
             android:textSize="20dp"
             android:background="#F77F76"
             />
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,7 +34,7 @@
                 android:layout_marginTop="10dp"
                 />
             <Spinner
-                android:id="@+id/router_spinner1"
+                android:id="@+id/wifilan_spinner1"
                 android:layout_width="200dp"
                 android:layout_height="25dp"
                 android:layout_marginLeft="50dp"
@@ -53,35 +54,16 @@
                 android:textStyle="bold"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="16dp"/>
+
             <Spinner
-                android:id="@+id/routerspinner2"
+                android:id="@+id/wifilan_spinner2"
                 android:layout_width="200dp"
-                android:layout_height="25dp"
-                android:layout_marginLeft="20dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
                 android:layout_marginTop="16dp" />
 
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp" >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Router Type :"
-            android:textSize="15dp"
-            android:textStyle="bold"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="16dp"/>
-            <Spinner
-                android:id="@+id/routerspinner3"
-                android:layout_width="200dp"
-                android:layout_height="25dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="16dp" />
 
-
-        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -89,48 +71,31 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="No.of Port :"
+                android:text="MBPS :"
                 android:textSize="15dp"
                 android:textStyle="bold"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="16dp"/>
             <Spinner
-                android:id="@+id/router_spinner4"
+                android:id="@+id/wifilan_spinner3"
                 android:layout_width="200dp"
-                android:layout_height="25dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="50dp"
                 android:layout_marginTop="16dp" />
 
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp" >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="MBPS :"
-            android:textSize="15dp"
-            android:textStyle="bold"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="16dp"/>
-            <Spinner
-                android:id="@+id/router_spinner5"
-                android:layout_width="200dp"
-                android:layout_height="25dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginTop="16dp" />
+
+
 
         </LinearLayout>
-
-
         <Button
             android:layout_width="200dp"
             android:layout_height="45dp"
             android:text="Submit"
-            android:layout_marginTop="40dp"
-            android:id="@+id/router_subbtn1"
+            android:layout_marginTop="30dp"
+            android:id="@+id/wifilan_subbtn1"
             android:layout_gravity="center"/>
+
+
     </LinearLayout>
 
 </ScrollView>
