--- a/app/src/main/res/layout/activity_wifi_internet_dongle_activity.xml
+++ b/app/src/main/res/layout/activity_wifi_internet_dongle_activity.xml
@@ -18,79 +18,79 @@
             android:textSize="20dp"
             android:background="#F77F76"
             />
-        <TextView
+
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Company Name :"
-            android:textSize="15dp"
-            android:textStyle="bold"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="16dp"/>
-        <CheckBox
+            android:layout_marginTop="10dp" >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Company Name :"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="16dp"/>
+            <Spinner
+                android:id="@+id/wifiinternet_spinner1"
+                android:layout_width="200dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="16dp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="D-Link"
-            android:textSize="13dp"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/dongle_compyname1"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Huawei"
-            android:textSize="13dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/dongle_compyname2"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="JioFi"
-            android:textSize="13dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/dongle_compyname3"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="iBall"
-            android:textSize="13dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/dongle_compyname4"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Dongle Type :"
-            android:textSize="15dp"
-            android:textStyle="bold"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="16dp"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Prepaid"
-            android:textSize="13dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/dongle_type1"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Postpaid"
-            android:textSize="13dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/dongle_type2"/>
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Dongle Type :"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="16dp"/>
+            <Spinner
+                android:id="@+id/wifiinternet_spinner2"
+                android:layout_width="200dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="16dp" />
+
+        </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Enter Sim Detail:"
             android:textSize="15dp"
             android:textStyle="bold"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
             android:layout_marginLeft="10dp"
            />
+        <TextView
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:textSize="13dp"
+            android:textStyle="bold"
+            android:layout_marginTop="16dp"
+            android:text="Sim No."/>
+
+        <EditText
+            android:layout_width="120dp"
+            android:layout_height="32dp"
+            android:layout_marginLeft="16dp"
+            android:id="@+id/dongle_simno"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/border_table"
+            android:hint="No."
+            android:textSize="13dp" />
+
         <TextView
             android:layout_width="90dp"
             android:layout_height="wrap_content"
@@ -101,7 +101,7 @@
             android:text="Sim Name"/>
 
         <EditText
-            android:layout_width="100dp"
+            android:layout_width="120dp"
             android:layout_height="32dp"
             android:layout_marginLeft="16dp"
             android:id="@+id/dongle_simname"
@@ -120,8 +120,8 @@
             android:text="Sim Recharg"/>
 
         <EditText
-            android:layout_width="100dp"
-            android:layout_height="35dp"
+            android:layout_width="120dp"
+            android:layout_height="32dp"
             android:layout_marginLeft="16dp"
             android:hint="RS:"
             android:id="@+id/dongle_simrecharge"
@@ -138,8 +138,8 @@
             android:text="Sim Validity"/>
 
         <EditText
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="32dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/border_table"
@@ -150,6 +150,7 @@
             android:layout_width="200dp"
             android:layout_height="45dp"
             android:text="Submit"
+            android:layout_marginTop="20dp"
             android:id="@+id/dongle_subbtn1"
             android:layout_gravity="center"/>
 
