--- a/app/src/main/res/layout/activity_add__item.xml
+++ b/app/src/main/res/layout/activity_add__item.xml
@@ -46,7 +46,7 @@
         android:background="@drawable/border_table"
         android:layout_marginTop="150dp"
         android:layout_marginLeft="130dp"/>
-        <TextView
+       <!-- <TextView
         android:id="@+id/additem_dom"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
@@ -68,14 +68,14 @@
         android:layout_marginTop="250dp"
         android:textSize="15dp"
         android:background="@drawable/border_table"
-        android:hint="Enter office no."/>
+        android:hint="Enter office no."/>-->
         <TextView
             android:id="@+id/serialno"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/textView2"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="200dp"
+            android:layout_marginTop="202dp"
             android:textSize="15dp"
             android:textStyle="bold"
             android:layout_marginLeft="10dp"
@@ -89,34 +89,13 @@
             android:layout_height="32dp"
             android:layout_below="@+id/textView2"
             android:layout_marginLeft="130dp"
-            android:layout_marginTop="200dp"
+            android:layout_marginTop="202dp"
             android:textSize="15dp"
             android:background="@drawable/border_table"
             android:hint="Enter serial no."/>
 
-        <TextView
-        android:id="@+id/supplier"
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_below="@+id/textView2"
-        android:layout_marginTop="300dp"
-        android:textSize="15dp"
-        android:text="Supplier name:"
-        android:textStyle="bold"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <EditText
-        android:id="@+id/suppliernameEditText"
-        android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:layout_below="@+id/textView2"
-        android:layout_marginLeft="130dp"
-        android:layout_marginTop="300dp"
-        android:textSize="15dp"
-        android:background="@drawable/border_table"
-        android:hint="Enter supplier name"/>
+
         <TextView
             android:id="@+id/category"
             android:layout_width="90dp"
@@ -138,56 +117,7 @@
            android:entries="@array/select"
             android:layout_marginLeft="120dp"></Spinner>
 
-    <TextView
-        android:id="@+id/mobileno"
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_marginLeft="10dp"
-        android:layout_below="@+id/textView2"
-        android:textSize="15dp"
-        android:layout_marginTop="350dp"
-        android:text="Mobile no:"
-        android:textStyle="bold"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-        <EditText
-            android:id="@+id/mobilenoEditText"
-            android:layout_width="274dp"
-            android:layout_height="32dp"
-            android:layout_below="@+id/textView2"
-            android:layout_marginLeft="130dp"
-            android:layout_marginTop="350dp"
-            android:maxLength="10"
-            android:inputType="number"
-            android:background="@drawable/border_table"
-            android:hint="Enter mobile no."
-            android:textSize="15dp" />
-        <TextView
-            android:id="@+id/additem_quan"
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView2"
-            android:layout_marginLeft="10dp"
-            android:layout_below="@+id/textView2"
-            android:textSize="15dp"
-            android:layout_marginTop="400dp"
-            android:text="Quantity:"
-            android:textStyle="bold"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <EditText
-            android:id="@+id/additem_quanET"
-            android:layout_width="274dp"
-            android:layout_height="32dp"
-            android:layout_below="@+id/textView2"
-            android:layout_marginLeft="130dp"
-            android:layout_marginTop="400dp"
-
-            android:inputType="number"
-            android:background="@drawable/border_table"
-            android:hint="Enter quantity"
-            android:textSize="15dp" />
         <TextView
             android:id="@+id/additem_date"
             android:layout_width="90dp"
@@ -196,7 +126,7 @@
             android:layout_marginLeft="10dp"
             android:layout_below="@+id/textView2"
             android:textSize="15dp"
-            android:layout_marginTop="450dp"
+            android:layout_marginTop="252dp"
             android:text="Date:"
             android:textStyle="bold"
             android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -207,8 +137,8 @@
             android:layout_height="32dp"
             android:layout_below="@+id/textView2"
             android:layout_marginLeft="130dp"
-            android:layout_marginTop="450dp"
-            android:text="Select"
+            android:layout_marginTop="252dp"
+            android:hint="Select"
             android:inputType="number"
             android:background="@drawable/border_table"
             android:textSize="15dp" />
@@ -221,7 +151,7 @@
         android:layout_width="210dp"
         android:layout_height="47dp"
         android:layout_marginLeft="90dp"
-        android:layout_marginTop="550dp"
+        android:layout_marginTop="305dp"
 
         android:gravity="center"
         android:text="SUBMIT "
