--- a/app/src/main/res/layout/activity_gps_activity.xml
+++ b/app/src/main/res/layout/activity_gps_activity.xml
@@ -16,53 +16,104 @@
             android:gravity="center"
             android:textStyle="bold"
             android:textSize="20dp"
-            android:background="#F77F76"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Enter Detail:"
-            android:textSize="19dp"
-            android:textStyle="bold"
+            android:background="#F77F76"/>
 
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="30dp"/>
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="16dp"
-            android:textSize="15dp"
-            android:textStyle="bold"
-            android:text="Company Name"/>
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Brand:"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                />
+            <Spinner
+                android:id="@+id/gps_spinner1"
+                android:layout_width="200dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="60dp"
+                android:layout_marginTop="10dp" />
 
-        <EditText
-            android:layout_width="100dp"
-            android:layout_height="32dp"
 
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="10dp"
-            android:hint="Name"
-            android:textSize="13dp"
-            android:id="@+id/gps_compyame"
-            android:background="@drawable/border_table" />
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Company Name :"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"/>
 
+            <Spinner
+                android:id="@+id/gps_spinner2"
+                android:layout_width="200dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp" />
+
+            <!-- <RadioGroup
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:id="@+id/gpstraking_radiogrp2">
+             <RadioButton
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="Microsoft"
+                 android:textSize="13dp"
+                 android:layout_marginTop="10dp"
+                 android:layout_marginLeft="16dp"
+                 android:id="@+id/gpstraking_compyname1"/>
+             <RadioButton
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="Logitech"
+                 android:textSize="13dp"
+                 android:layout_marginTop="10dp"
+                 android:layout_marginLeft="16dp"
+                 android:id="@+id/gpstraking_compyname2"/>
+             <RadioButton
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="Zebronics"
+                 android:textSize="13dp"
+                 android:layout_marginTop="10dp"
+                 android:layout_marginLeft="16dp"
+                 android:id="@+id/gpstraking_compyname3"/>
+             <RadioButton
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="HP"
+                 android:textSize="13dp"
+                 android:layout_marginTop="10dp"
+                 android:layout_marginLeft="16dp"
+                 android:id="@+id/gpstraking_compyname4"/>
+             </RadioGroup>-->
+        </LinearLayout>
 
 
         <TextView
             android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:layout_marginLeft="16dp"
-            android:textSize="15dp"
+            android:textSize="13dp"
             android:textStyle="bold"
             android:text="Sim Name"/>
 
         <EditText
-            android:layout_width="100dp"
+            android:layout_width="171dp"
             android:layout_height="32dp"
-            android:id="@+id/gps-simname"
+            android:id="@+id/gps_simname"
 
             android:layout_marginLeft="16dp"
             android:layout_marginTop="10dp"
@@ -80,11 +131,11 @@
             android:text="Sim Recharg"/>
 
         <EditText
-            android:layout_width="100dp"
+            android:layout_width="171dp"
             android:layout_height="35dp"
             android:layout_marginLeft="16dp"
             android:hint="RS:"
-            android:id="@+id/gps-recharge"
+            android:id="@+id/gps_recharge"
             android:layout_marginTop="20dp"
             android:textSize="13dp"
             android:background="@drawable/border_table" />
@@ -98,7 +149,7 @@
             android:text="Sim Validity"/>
 
         <EditText
-            android:layout_width="100dp"
+            android:layout_width="171dp"
             android:layout_height="35dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="20dp"
