--- a/app/src/main/res/layout/activity_loginpg.xml
+++ b/app/src/main/res/layout/activity_loginpg.xml
@@ -9,7 +9,7 @@
     >
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:text="Stock Management System "
         android:gravity="center"
         android:textStyle="bold"
