--- a/app/src/main/res/layout/activity_printer_activity.xml
+++ b/app/src/main/res/layout/activity_printer_activity.xml
@@ -18,46 +18,59 @@
             android:textSize="20dp"
             android:background="#F77F76"
             />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Brand:"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                />
+            <Spinner
+                android:id="@+id/printer_spinner1"
+                android:layout_width="200dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="10dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Company Name :"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="16dp"/>
+            <Spinner
+                android:id="@+id/printer_spinner2"
+                android:layout_width="200dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="16dp" />
+
+        </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Company Name :"
-            android:textSize="15dp"
-            android:textStyle="bold"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="16dp"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="HP"
-            android:textSize="13dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/printer_compyname1"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Canon"
-            android:textSize="13dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/printer_compyname2"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Samsung"
-            android:textSize="13dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/printer_compyname3"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Brother"
-            android:textSize="13dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/printer_compyname4"/>
+            android:layout_marginTop="30dp"
+            android:text="Printer Type :"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+
+
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -65,14 +78,7 @@
             android:layout_height="match_parent">
 
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:text="Printer Type :"
-                android:textSize="15dp"
-                android:textStyle="bold" />
+
 
 
 
@@ -108,7 +114,7 @@
                 android:id="@+id/printer_type3"
                 android:layout_width="100dp"
                 android:layout_height="45dp"
-                android:layout_marginLeft="120dp"
+                android:layout_marginLeft="16dp"
                 android:layout_marginTop="10dp"
                 android:text="color cartridge"
                 android:textSize="13dp" />
@@ -120,6 +126,14 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="20dp"
                 android:text="Color Laser"
+                android:textSize="13dp" />
+            <CheckBox
+                android:id="@+id/printer_type5"
+                android:layout_width="100dp"
+                android:layout_height="45dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="20dp"
+                android:text="Inktank"
                 android:textSize="13dp" />
         </LinearLayout>
 
