--- a/app/src/main/res/layout/activity_switches_activity.xml
+++ b/app/src/main/res/layout/activity_switches_activity.xml
@@ -18,46 +18,54 @@
             android:textSize="20dp"
             android:background="#F77F76"
             />
-        <TextView
+
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Brand:"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"></TextView>
+            <Spinner
+                android:id="@+id/switch_spinner1"
+                android:layout_width="200dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="10dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Company Name :"
-            android:textSize="15dp"
-            android:textStyle="bold"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="16dp"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="DGSOL"
-            android:textSize="13dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/switch_compyname1"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="DLink"
-            android:textSize="13dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/switch_compyname2"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Retelok"
-            android:textSize="13dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/switch_compyname3"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textSize="13dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/switch_compyname4"/>
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Company Name :"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="16dp"/>
+            <Spinner
+                android:id="@+id/switch_spinner2"
+                android:layout_width="200dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="16dp" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -66,27 +74,19 @@
             android:textStyle="bold"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="16dp"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Managed"
-            android:textSize="13dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/switch_mang"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Un-Managed"
-            android:textSize="13dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/switch_unmang"/>
+            <Spinner
+                android:id="@+id/switch_spinner3"
+                android:layout_width="200dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="16dp"/>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -95,76 +95,20 @@
                 android:text="No.of Port :"
                 android:textSize="15dp"
                 android:textStyle="bold" />
-
-            <CheckBox
-                android:id="@+id/switch_port1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="20dp"
-                android:text="4"
-                android:textSize="13dp" />
-
-            <CheckBox
-                android:id="@+id/switch_port2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="20dp"
-                android:text="5"
-                android:textSize="13dp" />
-
-            <CheckBox
-                android:id="@+id/switch_port3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="20dp"
-                android:text="6"
-                android:textSize="13dp" />
-
-            <CheckBox
-                android:id="@+id/switch_port4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="20dp"
-                android:text="8"
-                android:textSize="13dp" />
+            <Spinner
+                android:id="@+id/switch_spinner4"
+                android:layout_width="200dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="16dp" />
 
 
-
-
-
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <CheckBox
-                android:id="@+id/switch_port5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="100dp"
-                android:layout_marginTop="20dp"
-                android:text="16"
-                android:textSize="13dp" />
-
-
-            <CheckBox
-            android:id="@+id/switch_port6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="20dp"
-            android:text="32"
-            android:textSize="13dp" />
         </LinearLayout>
         <Button
             android:layout_width="200dp"
             android:layout_height="45dp"
             android:text="Submit"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="40dp"
             android:id="@+id/switch_subbtn1"
             android:layout_gravity="center"/>
 
