--- a/app/src/main/res/layout/activity_xerox_activity.xml
+++ b/app/src/main/res/layout/activity_xerox_activity.xml
@@ -18,101 +18,95 @@
         android:textSize="20dp"
         android:background="#F77F76"
         />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Enter Detail:"
-        android:textSize="19dp"
-        android:textStyle="bold"
 
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="30dp"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="16dp"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        android:text="Company Name"/>
 
-    <EditText
-        android:layout_width="300dp"
-        android:layout_height="32dp"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Brand:"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                />
+            <Spinner
+                android:id="@+id/xerox_spinner1"
+                android:layout_width="200dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="10dp" />
 
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="10dp"
-        android:hint="Name"
-        android:textSize="13dp"
-        android:id="@+id/xerox-compyame"
-        android:background="@drawable/border_table" />
+
+        </LinearLayout>
 
 
 
-
-    <TextView
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="16dp"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        android:text="Model no"/>
-
-    <EditText
-        android:layout_width="300dp"
-        android:layout_height="32dp"
-        android:id="@+id/xerox-modelno"
-
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="10dp"
-        android:hint="Enter model no "
-        android:textSize="13dp"
-        android:background="@drawable/border_table" />
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="PPM :"
-            android:textSize="15dp"
-            android:textStyle="bold"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="16dp"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="20"
-            android:textSize="13dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/xerox_ppm1"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="23"
-            android:textSize="13dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/xerox_ppm2"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="25"
-            android:textSize="13dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/xerox_ppm3"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="28"
-            android:textSize="13dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/xerox_ppm4"/>
+            android:layout_marginTop="10dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="PPM :"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="16dp"/>
+            <Spinner
+                android:id="@+id/xerox_spinner2"
+                android:layout_width="200dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="16dp" />
+
+            <!-- <RadioGroup
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:id="@+id/xerox_radiogrp2">
+         <RadioButton
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="20"
+             android:textSize="13dp"
+             android:layout_marginTop="10dp"
+             android:layout_marginLeft="16dp"
+             android:id="@+id/xerox_ppm1"/>
+         <RadioButton
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="23"
+             android:textSize="13dp"
+             android:layout_marginTop="10dp"
+             android:layout_marginLeft="16dp"
+             android:id="@+id/xerox_ppm2"/>
+         <RadioButton
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="25"
+             android:textSize="13dp"
+             android:layout_marginTop="10dp"
+             android:layout_marginLeft="16dp"
+             android:id="@+id/xerox_ppm3"/>
+         <RadioButton
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="28"
+             android:textSize="13dp"
+             android:layout_marginTop="10dp"
+             android:layout_marginLeft="16dp"
+             android:id="@+id/xerox_ppm4"/>
+             </RadioGroup>-->
+        </LinearLayout>
         <Button
             android:layout_width="200dp"
             android:layout_height="45dp"
             android:text="Submit"
+            android:layout_marginTop="40dp"
             android:id="@+id/xerox_subbtn1"
             android:layout_gravity="center"/>
 
